Add Random Forest

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "49459e9b-99f7-41f6-a659-9fbc7f07832d",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
     "import math"
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "286c3830-5d05-4106-906a-a7a3386efbde",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "a10d3551-3b75-4904-8a01-82ab51a1bb32",
    "metadata": {},
    "outputs": [],
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "d3d6264f-bee2-488c-bf4c-5de8cdbcab03",
    "metadata": {},
    "outputs": [
@@ -113,9 +114,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42b9ba1e-903e-40be-991c-0c75a00cdc2c",
+   "metadata": {},
+   "source": [
+    "## Random forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "856d3722-c9aa-4546-8801-5b8fa9f700c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 7587916.149019997\n",
+      "RMSE: 2754.6172418359683\n",
+      "MAE: 1159.3149405557112\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(n_estimators=500, max_features=8, n_jobs=-1).fit(X_train, y_train)\n",
+    "y_pred_rf = rf.predict(X_test)\n",
+    "mse = metrics.mean_squared_error(y_test, y_pred_rf)\n",
+    "rmse = math.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_pred_rf)\n",
+    "print(\"MSE: \" + str(mse))\n",
+    "print(\"RMSE: \" + str(rmse))\n",
+    "print(\"MAE: \" + str(mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "418a6813-f086-48d2-9e52-6a356cdc3e6a",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f505caf-d13c-4462-85ac-e343a64860f7",
+   "id": "9c860936-85fc-4709-9774-de83afd1fb08",
    "metadata": {},
    "outputs": [],
    "source": []
