Add initial version of multilayer perceptron

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -152,12 +152,84 @@
    "cell_type": "markdown",
    "id": "418a6813-f086-48d2-9e52-6a356cdc3e6a",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Multilayer Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9c860936-85fc-4709-9774-de83afd1fb08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "5959/5959 [==============================] - 19s 3ms/step - loss: 124342488.0000 - mae: 6223.3711 - val_loss: 29672728.0000 - val_mae: 3349.4348\n",
+      "Epoch 2/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 27883768.0000 - mae: 3232.3948 - val_loss: 28103098.0000 - val_mae: 3196.2537\n",
+      "Epoch 3/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 26682114.0000 - mae: 3126.9985 - val_loss: 27086154.0000 - val_mae: 3145.5420\n",
+      "Epoch 4/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 25881238.0000 - mae: 3066.3037 - val_loss: 26178814.0000 - val_mae: 3067.0283\n",
+      "Epoch 5/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 25068414.0000 - mae: 3005.2976 - val_loss: 25378264.0000 - val_mae: 3024.3074\n",
+      "Epoch 6/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 24157248.0000 - mae: 2940.4316 - val_loss: 24228226.0000 - val_mae: 2924.5330\n",
+      "Epoch 7/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 23072882.0000 - mae: 2861.8044 - val_loss: 23003014.0000 - val_mae: 2834.2593\n",
+      "Epoch 8/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 22002640.0000 - mae: 2779.0798 - val_loss: 21997208.0000 - val_mae: 2784.7112\n",
+      "Epoch 9/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 21154854.0000 - mae: 2711.7979 - val_loss: 21071990.0000 - val_mae: 2686.6638\n",
+      "Epoch 10/10\n",
+      "5959/5959 [==============================] - 18s 3ms/step - loss: 20512554.0000 - mae: 2660.2922 - val_loss: 20593906.0000 - val_mae: 2656.8899\n",
+      "1862/1862 [==============================] - 4s 2ms/step - loss: 19961192.0000 - mae: 2631.0112\n",
+      "Test MAE: 2631.01123046875\n",
+      "1862/1862 [==============================] - 4s 2ms/step\n",
+      "Test MSE: 19961190.11233649\n",
+      "Test RMSE: 4467.794770615195\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import models, layers\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "model = models.Sequential()\n",
+    "model.add(layers.Dense(128, activation='relu', input_shape=(X_train.shape[1],)))\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(1, activation='linear'))\n",
+    "\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error', metrics=['mae'])\n",
+    "model.fit(X_train_scaled, y_train, epochs=10, batch_size=32, validation_split=0.2)\n",
+    "\n",
+    "# Evaluate the model on the test set\n",
+    "test_loss, test_mae = model.evaluate(X_test_scaled, y_test)\n",
+    "print(f'Test MAE: {test_mae}')\n",
+    "\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "\n",
+    "# Calculate and print MSE and RMSE\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "print(f'Test MSE: {mse}')\n",
+    "print(f'Test RMSE: {rmse}')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c860936-85fc-4709-9774-de83afd1fb08",
+   "id": "9d5c227c-724f-4187-b0e7-f2686b1b1843",
    "metadata": {},
    "outputs": [],
    "source": []
