--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "49459e9b-99f7-41f6-a659-9fbc7f07832d",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,15 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import metrics\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "286c3830-5d05-4106-906a-a7a3386efbde",
    "metadata": {},
    "outputs": [],
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "a10d3551-3b75-4904-8a01-82ab51a1bb32",
    "metadata": {},
    "outputs": [],
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "d3d6264f-bee2-488c-bf4c-5de8cdbcab03",
    "metadata": {},
    "outputs": [
@@ -98,7 +101,7 @@
      "text": [
       "MSE: 44809694.61106912\n",
       "RMSE: 6694.004377879441\n",
-      "MAE: 4558.017302847958\n"
+      "MAE: 4558.017302847961\n"
      ]
     }
    ],
@@ -123,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "856d3722-c9aa-4546-8801-5b8fa9f700c4",
    "metadata": {},
    "outputs": [
@@ -131,9 +134,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 7587916.149019997\n",
-      "RMSE: 2754.6172418359683\n",
-      "MAE: 1159.3149405557112\n"
+      "MSE: 7599464.922266816\n",
+      "RMSE: 2756.7127021629976\n",
+      "MAE: 1158.2103852486134\n"
      ]
     }
    ],
@@ -227,9 +230,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25570ce2-3bb8-4558-8d84-a03f868ca2c2",
+   "metadata": {},
+   "source": [
+    "## Bagging Regression Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bbccfbff-ba7b-407c-b952-b1d8ad582233",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 7917499.504909788\n",
+      "RMSE: 2813.8051647030907\n",
+      "MAE: 1095.8675191186674\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_regressor = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "# Create a Bagging Regressor with Decision Trees as base estimators\n",
+    "bagging_regressor = BaggingRegressor(base_regressor, n_estimators=10, random_state=42)\n",
+    "\n",
+    "# Define the parameter grid for hyperparameter tuning\n",
+    "# param_grid = {\n",
+    "#     'n_estimators': [5, 10, 15],\n",
+    "#     'max_samples': [0.5, 0.7, 1.0],\n",
+    "#     'max_features': [0.5, 0.7, 1.0]\n",
+    "# }\n",
+    "\n",
+    "# # Use GridSearchCV for hyperparameter tuning\n",
+    "# grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "# grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Fit the Bagging Regressor on the training data\n",
+    "bagging_regressor.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "y_pred = bagging_regressor.predict(X_test)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test, y_pred)\n",
+    "rmse = math.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test, y_pred)\n",
+    "print(\"MSE: \" + str(mse))\n",
+    "print(\"RMSE: \" + str(rmse))\n",
+    "print(\"MAE: \" + str(mae))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d5c227c-724f-4187-b0e7-f2686b1b1843",
+   "id": "774e708b-b307-4013-8f83-6d27bed440da",
    "metadata": {},
    "outputs": [],
    "source": []
