Add more expolorative analysis of dataset

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "49459e9b-99f7-41f6-a659-9fbc7f07832d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "286c3830-5d05-4106-906a-a7a3386efbde",
    "metadata": {},
    "outputs": [],
@@ -56,29 +56,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "a10d3551-3b75-4904-8a01-82ab51a1bb32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\I\\AppData\\Local\\Temp\\ipykernel_3796\\1441606978.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df.flight_class = df.flight_class.replace({'Economy' : 1,'Business' :2})\n"
+     ]
+    }
+   ],
    "source": [
     "df = pandas.read_csv('Clean_Dataset.csv')\n",
     "columns_to_drop = ['Unnamed: 0', 'flight']\n",
     "df = df.drop(columns=columns_to_drop)\n",
     "le = LabelEncoder()\n",
-    "df['class'] = le.fit_transform(df['class'])\n",
+    "df.flight_class = df.flight_class.replace({'Economy' : 1,'Business' :2})\n",
+    "df['airline'] = le.fit_transform(df['airline'])\n",
+    "df['source_city'] = le.fit_transform(df['source_city'])\n",
+    "df['destination_city'] = le.fit_transform(df['destination_city'])\n",
+    "df['departure_time'] = le.fit_transform(df['departure_time'])\n",
+    "df['arrival_time'] = le.fit_transform(df['arrival_time'])\n",
+    "df['stops'] = le.fit_transform(df['stops'])\n",
+    "# # One-hot encoding\n",
+    "# columns_to_onehot = ['airline', 'source_city', 'destination_city', 'departure_time', 'arrival_time', 'stops']\n",
     "\n",
-    "# One-hot encoding\n",
-    "columns_to_onehot = ['airline', 'source_city', 'destination_city', 'departure_time', 'arrival_time', 'stops']\n",
+    "# ohe = OneHotEncoder(drop='first', sparse_output=False)\n",
+    "# one_hot_encoded = ohe.fit_transform(df[columns_to_onehot])\n",
     "\n",
-    "ohe = OneHotEncoder(drop='first', sparse_output=False)\n",
-    "one_hot_encoded = ohe.fit_transform(df[columns_to_onehot])\n",
-    "\n",
-    "df_encoded = pandas.DataFrame(one_hot_encoded, columns=ohe.get_feature_names_out(columns_to_onehot))\n",
-    "df = pandas.concat([df.drop(columns=columns_to_onehot), df_encoded], axis=1)\n",
+    "# df_encoded = pandas.DataFrame(one_hot_encoded, columns=ohe.get_feature_names_out(columns_to_onehot))\n",
+    "# df = pandas.concat([df.drop(columns=columns_to_onehot), df_encoded], axis=1)\n",
     "df = remove_outliers(df, ['duration', 'price'])\n",
     "X = df.drop(columns='price')\n",
     "y = df.price\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=0)\n",
+    "\n",
+    "df_business = df[df['flight_class'] == 2]\n",
+    "X_business = df_business.drop(columns='price')\n",
+    "y_business = df_business.price\n",
+    "X_train_business, X_test_business, y_train_business, y_test_business = train_test_split(X_business, y_business, test_size=0.20, random_state=0)\n",
+    "\n",
+    "df_economy = df[df['flight_class'] == 1]\n",
+    "X_economy = df_economy.drop(columns='price')\n",
+    "y_economy = df_economy.price\n",
+    "X_train_economy, X_test_economy, y_train_economy, y_test_economy = train_test_split(X_economy, y_economy, test_size=0.20, random_state=0)\n",
+    "\n"
    ]
   },
   {
@@ -91,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "d3d6264f-bee2-488c-bf4c-5de8cdbcab03",
    "metadata": {},
    "outputs": [
@@ -99,9 +124,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 44809694.61106912\n",
-      "RMSE: 6694.004377879441\n",
-      "MAE: 4558.017302847961\n"
+      "MSE: 48220128.129044436\n",
+      "RMSE: 6944.071437495761\n",
+      "MAE: 4635.282149073735\n"
      ]
     }
    ],
@@ -126,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "856d3722-c9aa-4546-8801-5b8fa9f700c4",
    "metadata": {},
    "outputs": [
@@ -134,9 +159,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 7599464.922266816\n",
-      "RMSE: 2756.7127021629976\n",
-      "MAE: 1158.2103852486134\n"
+      "MSE: 7567472.241721295\n",
+      "RMSE: 2750.903895398982\n",
+      "MAE: 1158.3949843340113\n"
      ]
     }
    ],
@@ -161,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "9c860936-85fc-4709-9774-de83afd1fb08",
    "metadata": {},
    "outputs": [
@@ -170,30 +195,30 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "5959/5959 [==============================] - 19s 3ms/step - loss: 124342488.0000 - mae: 6223.3711 - val_loss: 29672728.0000 - val_mae: 3349.4348\n",
+      "5959/5959 [==============================] - 30s 5ms/step - loss: 127364008.0000 - mae: 6331.6567 - val_loss: 29978430.0000 - val_mae: 3390.8547\n",
       "Epoch 2/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 27883768.0000 - mae: 3232.3948 - val_loss: 28103098.0000 - val_mae: 3196.2537\n",
+      "5959/5959 [==============================] - 28s 5ms/step - loss: 27978258.0000 - mae: 3246.2256 - val_loss: 27967138.0000 - val_mae: 3203.2166\n",
       "Epoch 3/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 26682114.0000 - mae: 3126.9985 - val_loss: 27086154.0000 - val_mae: 3145.5420\n",
+      "5959/5959 [==============================] - 28s 5ms/step - loss: 26662324.0000 - mae: 3132.8635 - val_loss: 26969240.0000 - val_mae: 3137.2117\n",
       "Epoch 4/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 25881238.0000 - mae: 3066.3037 - val_loss: 26178814.0000 - val_mae: 3067.0283\n",
+      "5959/5959 [==============================] - 26s 4ms/step - loss: 25722842.0000 - mae: 3059.3945 - val_loss: 25885694.0000 - val_mae: 3060.2773\n",
       "Epoch 5/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 25068414.0000 - mae: 3005.2976 - val_loss: 25378264.0000 - val_mae: 3024.3074\n",
+      "5959/5959 [==============================] - 28s 5ms/step - loss: 24728002.0000 - mae: 2989.2683 - val_loss: 25157052.0000 - val_mae: 3026.9038\n",
       "Epoch 6/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 24157248.0000 - mae: 2940.4316 - val_loss: 24228226.0000 - val_mae: 2924.5330\n",
+      "5959/5959 [==============================] - 29s 5ms/step - loss: 23640984.0000 - mae: 2911.2534 - val_loss: 23561452.0000 - val_mae: 2882.3240\n",
       "Epoch 7/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 23072882.0000 - mae: 2861.8044 - val_loss: 23003014.0000 - val_mae: 2834.2593\n",
+      "5959/5959 [==============================] - 26s 4ms/step - loss: 22467488.0000 - mae: 2823.2078 - val_loss: 22390070.0000 - val_mae: 2802.6987\n",
       "Epoch 8/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 22002640.0000 - mae: 2779.0798 - val_loss: 21997208.0000 - val_mae: 2784.7112\n",
+      "5959/5959 [==============================] - 28s 5ms/step - loss: 21517838.0000 - mae: 2749.0139 - val_loss: 21466228.0000 - val_mae: 2723.6782\n",
       "Epoch 9/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 21154854.0000 - mae: 2711.7979 - val_loss: 21071990.0000 - val_mae: 2686.6638\n",
+      "5959/5959 [==============================] - 29s 5ms/step - loss: 20846230.0000 - mae: 2695.7048 - val_loss: 20913874.0000 - val_mae: 2682.5605\n",
       "Epoch 10/10\n",
-      "5959/5959 [==============================] - 18s 3ms/step - loss: 20512554.0000 - mae: 2660.2922 - val_loss: 20593906.0000 - val_mae: 2656.8899\n",
-      "1862/1862 [==============================] - 4s 2ms/step - loss: 19961192.0000 - mae: 2631.0112\n",
-      "Test MAE: 2631.01123046875\n",
-      "1862/1862 [==============================] - 4s 2ms/step\n",
-      "Test MSE: 19961190.11233649\n",
-      "Test RMSE: 4467.794770615195\n"
+      "5959/5959 [==============================] - 28s 5ms/step - loss: 20314680.0000 - mae: 2651.8604 - val_loss: 20418884.0000 - val_mae: 2645.7307\n",
+      "1862/1862 [==============================] - 7s 4ms/step - loss: 19842606.0000 - mae: 2627.6348\n",
+      "Test MAE: 2627.634765625\n",
+      "1862/1862 [==============================] - 6s 3ms/step\n",
+      "Test MSE: 19842597.290863883\n",
+      "Test RMSE: 4454.503035228945\n"
      ]
     }
    ],
@@ -239,17 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bbccfbff-ba7b-407c-b952-b1d8ad582233",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "MSE: 7917499.504909788\n",
-      "RMSE: 2813.8051647030907\n",
-      "MAE: 1095.8675191186674\n"
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
