Add grid search

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "49459e9b-99f7-41f6-a659-9fbc7f07832d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Korisnik\\AppData\\Local\\Temp\\ipykernel_8740\\2987393687.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "286c3830-5d05-4106-906a-a7a3386efbde",
    "metadata": {},
    "outputs": [],
@@ -56,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "a10d3551-3b75-4904-8a01-82ab51a1bb32",
    "metadata": {},
    "outputs": [
@@ -64,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\I\\AppData\\Local\\Temp\\ipykernel_3796\\1441606978.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\Korisnik\\AppData\\Local\\Temp\\ipykernel_8740\\1441606978.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df.flight_class = df.flight_class.replace({'Economy' : 1,'Business' :2})\n"
      ]
     }
@@ -116,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "d3d6264f-bee2-488c-bf4c-5de8cdbcab03",
    "metadata": {},
    "outputs": [
@@ -151,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "746e645c-7b67-4081-afa2-a0e0da21bd18",
    "metadata": {},
    "outputs": [
@@ -159,9 +174,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 94337423.44612949\n",
-      "RMSE: 9712.74541240166\n",
-      "MAE: 7376.578364521866\n"
+      "MSE: 94337423.44612947\n",
+      "RMSE: 9712.745412401659\n",
+      "MAE: 7376.578364521865\n"
      ]
     }
    ],
@@ -186,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "e015d7be-d3a0-4dab-93fe-b3c538bca242",
    "metadata": {},
    "outputs": [
@@ -221,20 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "856d3722-c9aa-4546-8801-5b8fa9f700c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE: 7308543.468861054\n",
-      "RMSE: 2703.431794749232\n",
-      "MAE: 1070.4487792079212\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# param_grid = {\n",
     "#     'n_estimators': [100, 200, 300, 400, 500],\n",
@@ -616,17 +621,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "bbccfbff-ba7b-407c-b952-b1d8ad582233",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "Tuned Hyper Parameters :\n",
+      "{'max_features': 1.0, 'max_samples': 0.5, 'n_estimators': 15}\n",
+      "Tuned Hyper Parameters :\n",
+      "{'max_features': None, 'splitter': 'best'}\n",
+      "MSE: 7295633.8596384935\n",
+      "RMSE: 2701.043105846053\n",
+      "MAE: 1145.898434661537\n"
      ]
     }
    ],
@@ -637,20 +646,29 @@
     "bagging_regressor = BaggingRegressor(base_regressor, n_estimators=10, random_state=42)\n",
     "\n",
     "# Define the parameter grid for hyperparameter tuning\n",
-    "# param_grid = {\n",
-    "#     'n_estimators': [5, 10, 15],\n",
-    "#     'max_samples': [0.5, 0.7, 1.0],\n",
-    "#     'max_features': [0.5, 0.7, 1.0]\n",
-    "# }\n",
+    "param_grid = {\n",
+    "    'n_estimators': [5, 10, 15],\n",
+    "    'max_samples': [0.5, 0.7, 1.0],\n",
+    "    'max_features': [0.5, 0.7, 1.0]\n",
+    "}\n",
     "\n",
-    "# # Use GridSearchCV for hyperparameter tuning\n",
-    "# grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
-    "# grid_search.fit(X_train, y_train)\n",
+    "# Use GridSearchCV for hyperparameter tuning\n",
+    "grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "tree_bg = grid_search.fit(X_train, y_train)\n",
     "\n",
+    "parameters = {\n",
+    "    'splitter' : ['best', 'random'],\n",
+    "    'max_features' : [None, 8, 7, 6, 5],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "tree = DecisionTreeRegressor()\n",
+    "tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
+    "\n",
+    "tree = DecisionTreeRegressor(**tree_cv.best_params_)\n",
+    "bagging_regressor = BaggingRegressor(base_regressor,**tree_bg.best_params_, random_state=42)\n",
     "# Fit the Bagging Regressor on the training data\n",
     "bagging_regressor.fit(X_train, y_train)\n",
-    "\n",
-    "# Make predictions on the test data\n",
     "y_pred = bagging_regressor.predict(X_test)\n",
     "\n",
     "mse = metrics.mean_squared_error(y_test, y_pred)\n",
@@ -660,14 +678,6 @@
     "print(\"RMSE: \" + str(rmse))\n",
     "print(\"MAE: \" + str(mae))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "774e708b-b307-4013-8f83-6d27bed440da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
