Add economy and business class

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -236,10 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "856d3722-c9aa-4546-8801-5b8fa9f700c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 7311588.434043385\n",
+      "RMSE: 2703.9949027399043\n",
+      "MAE: 1070.847516833957\n"
+     ]
+    }
+   ],
    "source": [
     "# param_grid = {\n",
     "#     'n_estimators': [100, 200, 300, 400, 500],\n",
@@ -678,6 +688,122 @@
     "print(\"RMSE: \" + str(rmse))\n",
     "print(\"MAE: \" + str(mae))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faaf81b1-6762-49de-8024-7054ed8727ac",
+   "metadata": {},
+   "source": [
+    "## Bagging Regression Tree for economy class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d04abd5-8618-4f0e-a9be-8f2cf4ab738e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_regressor = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "# Create a Bagging Regressor with Decision Trees as base estimators\n",
+    "bagging_regressor = BaggingRegressor(base_regressor, n_estimators=10, random_state=42)\n",
+    "\n",
+    "# Define the parameter grid for hyperparameter tuning\n",
+    "param_grid = {\n",
+    "    'n_estimators': [5, 10, 15],\n",
+    "    'max_samples': [0.5, 0.7, 1.0],\n",
+    "    'max_features': [0.5, 0.7, 1.0]\n",
+    "}\n",
+    "\n",
+    "# Use GridSearchCV for hyperparameter tuning\n",
+    "grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "tree_bg = grid_search.fit(X_train_economy, y_train_economy)\n",
+    "\n",
+    "parameters = {\n",
+    "    'splitter' : ['best', 'random'],\n",
+    "    'max_features' : [None, 8, 7, 6, 5],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "tree = DecisionTreeRegressor()\n",
+    "tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
+    "\n",
+    "tree = DecisionTreeRegressor(**tree_cv.best_params_)\n",
+    "bagging_regressor = BaggingRegressor(base_regressor,**tree_bg.best_params_, random_state=42)\n",
+    "# Fit the Bagging Regressor on the training data\n",
+    "bagging_regressor.fit(X_train_economy, y_train_economy)\n",
+    "y_pred = bagging_regressor.predict(X_test_economy)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_economy, y_pred)\n",
+    "rmse = math.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_economy, y_pred)\n",
+    "print(\"MSE: \" + str(mse))\n",
+    "print(\"RMSE: \" + str(rmse))\n",
+    "print(\"MAE: \" + str(mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ae98696-5b4e-4447-ae9a-ca5f7e0b0d63",
+   "metadata": {},
+   "source": [
+    "## Bagging Regression Tree for business class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc7c68c9-5d75-4578-b3fc-e5f5e54d4c38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_regressor = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "# Create a Bagging Regressor with Decision Trees as base estimators\n",
+    "bagging_regressor = BaggingRegressor(base_regressor, n_estimators=10, random_state=42)\n",
+    "\n",
+    "# Define the parameter grid for hyperparameter tuning\n",
+    "param_grid = {\n",
+    "    'n_estimators': [5, 10, 15],\n",
+    "    'max_samples': [0.5, 0.7, 1.0],\n",
+    "    'max_features': [0.5, 0.7, 1.0]\n",
+    "}\n",
+    "\n",
+    "# Use GridSearchCV for hyperparameter tuning\n",
+    "grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "tree_bg = grid_search.fit(X_train_business, y_train_business)\n",
+    "\n",
+    "parameters = {\n",
+    "    'splitter' : ['best', 'random'],\n",
+    "    'max_features' : [None, 8, 7, 6, 5],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "tree = DecisionTreeRegressor()\n",
+    "tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
+    "\n",
+    "tree = DecisionTreeRegressor(**tree_cv.best_params_)\n",
+    "bagging_regressor = BaggingRegressor(base_regressor,**tree_bg.best_params_, random_state=42)\n",
+    "# Fit the Bagging Regressor on the training data\n",
+    "bagging_regressor.fit(X_train_business, y_train_business)\n",
+    "y_pred = bagging_regressor.predict(X_test)\n",
+    "\n",
+    "mse = metrics.mean_squared_error(y_test_business, y_pred)\n",
+    "rmse = math.sqrt(mse)\n",
+    "mae = metrics.mean_absolute_error(y_test_business, y_pred)\n",
+    "print(\"MSE: \" + str(mse))\n",
+    "print(\"RMSE: \" + str(rmse))\n",
+    "print(\"MAE: \" + str(mae))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6213b294-de87-4abe-860e-3f3486397a02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
