--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -699,10 +699,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6d04abd5-8618-4f0e-a9be-8f2cf4ab738e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 2028511.0323822298\n",
+      "RMSE: 1424.2580638291047\n",
+      "MAE: 627.2349961072184\n"
+     ]
+    }
+   ],
    "source": [
     "base_regressor = DecisionTreeRegressor(random_state=42)\n",
     "\n",
@@ -710,27 +720,27 @@
     "bagging_regressor = BaggingRegressor(base_regressor, n_estimators=10, random_state=42)\n",
     "\n",
     "# Define the parameter grid for hyperparameter tuning\n",
-    "param_grid = {\n",
-    "    'n_estimators': [5, 10, 15],\n",
-    "    'max_samples': [0.5, 0.7, 1.0],\n",
-    "    'max_features': [0.5, 0.7, 1.0]\n",
-    "}\n",
+    "# param_grid = {\n",
+    "#     'n_estimators': [5, 10, 15],\n",
+    "#     'max_samples': [0.5, 0.7, 1.0],\n",
+    "#     'max_features': [0.5, 0.7, 1.0]\n",
+    "# }\n",
     "\n",
-    "# Use GridSearchCV for hyperparameter tuning\n",
-    "grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
-    "tree_bg = grid_search.fit(X_train_economy, y_train_economy)\n",
+    "# # Use GridSearchCV for hyperparameter tuning\n",
+    "# grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "# tree_bg = grid_search.fit(X_train_economy, y_train_economy)\n",
     "\n",
-    "parameters = {\n",
-    "    'splitter' : ['best', 'random'],\n",
-    "    'max_features' : [None, 8, 7, 6, 5],\n",
-    "}\n",
+    "# parameters = {\n",
+    "#     'splitter' : ['best', 'random'],\n",
+    "#     'max_features' : [None, 8, 7, 6, 5],\n",
+    "# }\n",
     "\n",
     "\n",
-    "tree = DecisionTreeRegressor()\n",
-    "tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
+    "# tree = DecisionTreeRegressor()\n",
+    "# tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
     "\n",
-    "tree = DecisionTreeRegressor(**tree_cv.best_params_)\n",
-    "bagging_regressor = BaggingRegressor(base_regressor,**tree_bg.best_params_, random_state=42)\n",
+    "tree = DecisionTreeRegressor(splitter='best',max_features=None)\n",
+    "bagging_regressor = BaggingRegressor(base_regressor,n_estimators=15,max_samples=0.5,max_features=1.0, random_state=42)\n",
     "# Fit the Bagging Regressor on the training data\n",
     "bagging_regressor.fit(X_train_economy, y_train_economy)\n",
     "y_pred = bagging_regressor.predict(X_test_economy)\n",
@@ -753,10 +763,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fc7c68c9-5d75-4578-b3fc-e5f5e54d4c38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 18615411.670074083\n",
+      "RMSE: 4314.55810832049\n",
+      "MAE: 2161.473036317215\n"
+     ]
+    }
+   ],
    "source": [
     "base_regressor = DecisionTreeRegressor(random_state=42)\n",
     "\n",
@@ -764,30 +784,30 @@
     "bagging_regressor = BaggingRegressor(base_regressor, n_estimators=10, random_state=42)\n",
     "\n",
     "# Define the parameter grid for hyperparameter tuning\n",
-    "param_grid = {\n",
-    "    'n_estimators': [5, 10, 15],\n",
-    "    'max_samples': [0.5, 0.7, 1.0],\n",
-    "    'max_features': [0.5, 0.7, 1.0]\n",
-    "}\n",
+    "# param_grid = {\n",
+    "#     'n_estimators': [5, 10, 15],\n",
+    "#     'max_samples': [0.5, 0.7, 1.0],\n",
+    "#     'max_features': [0.5, 0.7, 1.0]\n",
+    "# }\n",
     "\n",
-    "# Use GridSearchCV for hyperparameter tuning\n",
-    "grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
-    "tree_bg = grid_search.fit(X_train_business, y_train_business)\n",
+    "# # Use GridSearchCV for hyperparameter tuning\n",
+    "# grid_search = GridSearchCV(bagging_regressor, param_grid, cv=5, scoring='neg_mean_squared_error')\n",
+    "# tree_bg = grid_search.fit(X_train_business, y_train_business)\n",
     "\n",
-    "parameters = {\n",
-    "    'splitter' : ['best', 'random'],\n",
-    "    'max_features' : [None, 8, 7, 6, 5],\n",
-    "}\n",
+    "# parameters = {\n",
+    "#     'splitter' : ['best', 'random'],\n",
+    "#     'max_features' : [None, 8, 7, 6, 5],\n",
+    "# }\n",
     "\n",
     "\n",
-    "tree = DecisionTreeRegressor()\n",
-    "tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
+    "# tree = DecisionTreeRegressor()\n",
+    "# tree_cv = GridSearchCV(estimator=tree, param_grid=parameters, cv=20).fit(X_train, y_train)\n",
     "\n",
-    "tree = DecisionTreeRegressor(**tree_cv.best_params_)\n",
-    "bagging_regressor = BaggingRegressor(base_regressor,**tree_bg.best_params_, random_state=42)\n",
+    "tree = DecisionTreeRegressor(splitter='best',max_features=None)\n",
+    "bagging_regressor = BaggingRegressor(base_regressor,n_estimators=15,max_samples=0.5,max_features=1.0, random_state=42)\n",
     "# Fit the Bagging Regressor on the training data\n",
     "bagging_regressor.fit(X_train_business, y_train_business)\n",
-    "y_pred = bagging_regressor.predict(X_test)\n",
+    "y_pred = bagging_regressor.predict(X_test_business)\n",
     "\n",
     "mse = metrics.mean_squared_error(y_test_business, y_pred)\n",
     "rmse = math.sqrt(mse)\n",
