Add evaluation and comparison of algorithm results

--- a/Algorithms.ipynb
+++ b/Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "49459e9b-99f7-41f6-a659-9fbc7f07832d",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Korisnik\\AppData\\Local\\Temp\\ipykernel_8740\\2987393687.py:1: DeprecationWarning: \n",
+      "C:\\Users\\I\\AppData\\Local\\Temp\\ipykernel_13604\\2987393687.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -818,9 +818,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5eec18f6-bef3-4a8d-8eb1-5e5ccfe77c62",
+   "metadata": {},
+   "source": [
+    "## Results for whole dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6213b294-de87-4abe-860e-3f3486397a02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Algorithm      MSE  RMSE  MAE\n",
+      "      Linear Regression  8168976  2858 2065\n",
+      "          Random Forest  7311588  2703 1070\n",
+      "  Multilayer Perceptron 19842597  4454 2627\n",
+      "Bagging Regression Tree  7295633  2701 1145\n",
+      "         SVM Regression        0     0    0\n",
+      "       Lasso Regression        0     0    0\n",
+      "                XGBoost        0     0    0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = { 'Algorithm': ['Linear Regression', 'Random Forest', 'Multilayer Perceptron', 'Bagging Regression Tree', 'SVM Regression', 'Lasso Regression', 'XGBoost'],\n",
+    "         'MSE':[8168976, 7311588, 19842597, 7295633,0,0,0],\n",
+    "         'RMSE':[2858, 2703, 4454, 2701,0,0,0],\n",
+    "               'MAE':[2065, 1070, 2627, 1145,0,0,0]}\n",
+    "dataframe = pandas.DataFrame(data)\n",
+    "print(dataframe.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1668f23-3aef-4b02-afed-b8d2469818d1",
+   "metadata": {},
+   "source": [
+    "## Results for business class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a22c0353-3cd1-4654-ac94-83e5c385db12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Algorithm      MSE  RMSE  MAE\n",
+      "      Linear Regression 94337423  9712 7376\n",
+      "          Random Forest 18960993  4354 2059\n",
+      "  Multilayer Perceptron 85973699  9272 6884\n",
+      "Bagging Regression Tree 18615411  4314 2161\n",
+      "         SVM Regression        0     0    0\n",
+      "       Lasso Regression        0     0    0\n",
+      "                XGBoost        0     0    0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = { 'Algorithm': ['Linear Regression', 'Random Forest', 'Multilayer Perceptron', 'Bagging Regression Tree', 'SVM Regression', 'Lasso Regression', 'XGBoost'],\n",
+    "         'MSE':[94337423, 18960993, 85973699, 18615411,0,0,0],\n",
+    "         'RMSE':[9712, 4354, 9272, 4314,0,0,0],\n",
+    "         'MAE':[7376, 2059, 6884, 2161,0,0,0]}\n",
+    "dataframe = pandas.DataFrame(data)\n",
+    "print(dataframe.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71d11426-d59a-4e76-9886-138702c85b9a",
+   "metadata": {},
+   "source": [
+    "## Results for economy class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3c5549e9-278f-482f-b24d-0a7192d2da93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Algorithm     MSE  RMSE  MAE\n",
+      "      Linear Regression 8168976  2858 2065\n",
+      "          Random Forest 1908115  1381  614\n",
+      "  Multilayer Perceptron 5618096  2370 1623\n",
+      "Bagging Regression Tree 2028511  1424  627\n",
+      "         SVM Regression       0     0    0\n",
+      "       Lasso Regression       0     0    0\n",
+      "                XGBoost       0     0    0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = { 'Algorithm': ['Linear Regression', 'Random Forest', 'Multilayer Perceptron', 'Bagging Regression Tree', 'SVM Regression', 'Lasso Regression', 'XGBoost'],\n",
+    "         'MSE':[8168976, 1908115, 5618096, 2028511,0,0,0],\n",
+    "         'RMSE':[2858, 1381, 2370, 1424,0,0,0],\n",
+    "         'MAE':[2065, 614, 1623, 627,0,0,0]}\n",
+    "dataframe = pandas.DataFrame(data)\n",
+    "print(dataframe.to_string(index=False))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6213b294-de87-4abe-860e-3f3486397a02",
+   "id": "f5e20499-6cae-4276-85c1-b8681ab00c46",
    "metadata": {},
    "outputs": [],
    "source": []
